@@ -1,5 +1,5 @@
 #!/bin/bash
 
-LD_PRELOAD="/usr/lib64/libprofiler.so.0" CPUPROFILE=../text/ui.prof ../test/ui
-pprof --gv ../test/ui ../test/ui.prof
+LD_LIBRARY_PATH=../src/.libs/ LD_PRELOAD="/usr/lib64/libprofiler.so.0" CPUPROFILE=../test/.libs/ui.prof ../test/.libs/ui
+pprof --gv ../test/.libs/ui ../test/.libs/ui.prof
 
