@@ -4,7 +4,7 @@
 
 PROG="ui"
 
-ltrace -o ./$PROG.ltrace ../test/.libs/$PROG
+LD_LIBRARY_PATH=../src/.libs/ ltrace -o ./$PROG.ltrace ../test/.libs/$PROG
 less ./$PROG.ltrace
-rm -f ./$PROG.ltrace
+rm -f ./$PROG.ltrace ./gmon.out
 
