@@ -1,12 +1,11 @@
 #!/bin/bash
 
 DIR="$PWD"
-cd ../src
-make clean
-make profile
-./finalcut
-gprof ./finalcut >./profile.txt
+cd ../test/.libs/
+LD_LIBRARY_PATH=../../src/.libs/ ./ui
+gprof ./ui >./profile.txt
 rm ./gmon.out
 less ./profile.txt
 rm ./profile.txt
 cd "$DIR"
+
